# echo-analyze

./: .env.example  .gitignore  .vercelignore  AGENT.md  AGENTS.md  README.md  package.json  pyproject.toml  requirements.txt  run_local.bat  test.js  test_api.py  vercel.json  verify_output.txt
Code/: test_api.py  test_casparser.py
app/: cas_parser.py  holdings.py  logger.py  main.py  models.py  overlap.py  reproduce_analysis.py  utils.py
app/Code/: __init__.py  advisor_clients.py  analytics.py  auth.py  billing.py  cas_parser.py  env_loader.py  holdings.py  investment_events.py  main.py  overlap.py  pdfminer_hardening.py  pyproject.toml  razorpay_payments.py  reviews.py  supabase.py  supabase_auth.py  utils.py
app/Code/ai/: anthropic_provider.py  gemini_provider.py  openai_provider.py  prompts.py  provider.py  review_ai.py
app/Code/benchmarks/: __init__.py  amfi_enrichment.py  amfi_sector_benchmarks.json  category_map.py  classifier_fallback.py  fof_resolver.py  index_name_parser.py  index_proxies.json  models.py  registry.py  resolver.py  scheme_master.json  sebi_tier1_registry.json  sector_map.py  solution_oriented.py  tri_history.py
casparser/: csv_safety.py
docs/: CODEBASE_DOCUMENTATION.md  CODE_REVIEW_REPORT_2026-03-08.md  RAZORPAY_STAGING_SETUP.md
frontend/: .env.example  build_verbose.txt  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: build_amfi_sector_benchmarks.py  build_scheme_master.py  fetch_tri_indices.py  validate_benchmarks.py
(+933 files in other folders)
