[project]
name = "echo-analyze"
version = "0.1.0"
description = "MF-CAS Portfolio Analyzer"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-multipart",
    "pydantic",
    "casparser",
    "openpyxl",
]

[project.scripts]
app = "app.main:app"
